--- a/Bookstore/Areas/WorkerOrderPickupPoint/Views/_ViewImports.cshtml
+++ b/Bookstore/Areas/WorkerOrderPickupPoint/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Bookstore
 @using Bookstore.Models
+@using Bookstore.Models.SD
 @using Bookstore.Models.Models
 @using Bookstore.DataAccess
 @using Bookstore.Models.ViewModel
