--- a/Bookstore/Areas/WorkerOrderPickupPoint/Views/Order/Order.cshtml
+++ b/Bookstore/Areas/WorkerOrderPickupPoint/Views/Order/Order.cshtml
@@ -7,10 +7,10 @@
 
 <div class="container">
     <div>
-        <h3>Проверка заказа</h3>
+        <h3>@ViewBag.operation</h3>
     </div>
     <div>
-        <form class="d-flex" method="post" asp-area="WorkerOrderPickupPoint" asp-controller="Order" asp-action="Order">
+        <form class="d-flex" method="get" asp-area="WorkerOrderPickupPoint" asp-controller="Order" asp-action="Order">
             <input class="form-control me-sm-1 bg-light" type="search" pattern="[0-9]+" name="searchOrderId" placeholder="Введите номер заказа">
             <button class="btn btn-dark my-4 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
         </form>
@@ -106,10 +106,30 @@
                 </div>
             </div>
             <form method="post" enctype="multipart/form-data">
-                <button type="submit" class="btn btn-success mt-2" asp-area="WorkerOrderPickupPoint" asp-controller="NotificationWorker"
-                        asp-action="Send" asp-route-notificationСode="5" asp-route-orderId="@Model.OrderId" >
-                    Уведомить клиента
-                </button>
+
+                @switch (ViewBag.operation)
+                {
+                    case SD.ViewOrderDetails:
+                        <button type="submit" class="btn btn-success mt-2" asp-area="WorkerOrderPickupPoint" asp-controller="NotificationWorker"
+                                asp-action="Send" asp-route-notificationСode="5" asp-route-orderId="@Model.OrderId">
+                            Уведомить клиента о прибытие посылки
+                        </button>
+                        break;
+                    case SD.AcceptOrder:
+                        <button type="submit" class="btn btn-success mt-2" asp-area="WorkerOrderPickupPoint" asp-controller="NotificationWorker"
+                                asp-action="Send" asp-route-notificationСode="5" asp-route-orderId="@Model.OrderId">
+                            Уведомить клиента о прибытие посылки
+                        </button>
+                        break;
+                    case SD.IssueOrder:
+                        <button type="submit" class="btn btn-success mt-2" asp-area="WorkerOrderPickupPoint" asp-controller="NotificationWorker"
+                                asp-action="Send" asp-route-notificationСode="5" asp-route-orderId="@Model.OrderId">
+                            Уведомить клиента о прибытие посылки
+                        </button>
+                        break;
+                    default:
+                        break;
+                }
             </form>
         </div>
         <hr class="mt-5 mb-5" />
