--- a/Bookstore/Areas/Customer/Views/NotificationCustomer/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/NotificationCustomer/Index.cshtml
@@ -15,6 +15,9 @@
                     <div class="rouden rounded-1 text-bg-primary col-auto">
                         @notification.OrderId
                     </div>
+                    <div class="rouden rounded-1 text-bg-primary col-auto">
+                        @notification.SendingTime
+                    </div>
                 </div>
                 <div class="col-1">
                 </div>
