--- a/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/Orders/Index.cshtml
@@ -17,12 +17,13 @@
                         @order.OrderId
                     </div>
                 </div>
+
                 <div class="d-inline-flex align-items-center">
                     <span class="mr-3">Статус заказа: </span>
                     <div class="rouden rounded-1 text-bg-primary m-1">@order.OrderStatus</div>
                 </div>
 
-                <div>
+                <div class="">
                     <label>Дата и время заказа: @order.PurchaseDate по МСК</label>
                 </div>
 
