add new roles add store

--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -80,6 +80,26 @@
                                             </li>
                                         </ul>
                                         break;
+
+                                    case SD.RoleOrderPicker:
+
+                                        <ul class="navbar-nav flex-grow-1">
+                                            <li>
+                                                <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="Registration">Сборка заказа</a>
+                                            </li>
+                                        </ul>
+
+                                        break;
+
+                                    case SD.RoleStorekeeper:
+
+                                        <ul class="navbar-nav flex-grow-1">
+                                            <li>
+                                                <a class="nav-link text-light" asp-area="Storekeeper" asp-controller="Store" asp-action="Index">Склад</a>
+                                            </li>
+                                        </ul>
+
+                                        break;
                                 }
                             }
 
