--- a/Bookstore/Areas/Storekeeper/Views/Store/Index.cshtml
+++ b/Bookstore/Areas/Storekeeper/Views/Store/Index.cshtml
@@ -1,53 +1,54 @@
-﻿@model IQueryable
+﻿@model IEnumerable
 
-<h2>Store</h2>
+<h2>Склад</h2>
 
 
-
-<div class="col-2 pb-5 mt-2 pt-3">
-    <a asp-action="Upsert" class="btn btn-success btn-outline-warning border-0 form-control">Новое поступление</a>
-</div>
-
-<div class="container-fluid">
-    <div class="row pb-5 mb-5 mb-2">
-        @if (Model != null)
-            @foreach (var book in Model.BookList)
-            {
-                <div class="col-lg-2 col-sm-2">
-                    <div class="row p-1 mt-2" style="height: 100%">
-                        <div class="col-12">
-                            <div class="card card-deck border-0 p-1 shadow mx-auto h-100">
-                                <img src="@book.ImageURL" class="card-img" />
-                                <div class="card-body border-light ">
-                                    <div class="card-body mt-auto mt-2">
-                                        <div class="">
-                                            <p class="card-title text-black"><b>@book.Title</b></p>
-                                        </div>
-                                        <div class="">
-                                            <p class="card-title text-dark opacity-75"><b>@book.Author</b></p>
-                                        </div>
-
-                                        <div class="pl-1">
-                                            @foreach (var categoryBook in Model.CategoryList.Where(u => u.Id == book.Category))
-                                            {
-                                                <p class="card-title text-dark opacity-75"><b>@categoryBook.Name</b></p>
-                                            }
-                                        </div>
-
-                                        <div class="">
-                                            <p class="text-dark h4 text-center mb-0">@book.Price</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card-footer bg-transparent">
-                                    <a asp-controller="Book" asp-action="Upsert" asp-route-bookId="@book.BookId" class="btn btn-success border-0 form-control">
-                                        Details
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            }
+<div class="container">
+    <div class="col-2 pb-5 mt-2 pt-3">
+        <button id="openSearch" class="btn btn-success btn-outline-warning border-0 form-control">Новое поступление</button>
     </div>
+
+    <div class="hidden">
+        <form class="d-flex" method="post" asp-area="Customer" asp-controller="Home" asp-action="Search">
+            <input class="form-control me-sm-1 bg-light" type="search" name="searchString" placeholder="Поиск по названию">
+            <input class="form-control me-sm-1 bg-light" type="search" name="searchString" placeholder="Поиск по Id">
+            <button class="btn btn-dark my-4 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
+        </form>
+        <div id="hide" class="mt-1">
+            <button class="btn btn-secondary">Скрыть</button>
+        </div>
+    </div>
+
+    @{
+        @if (Model != null)
+        {
+            string isHidden = "visible";
+        }
+        else
+        {
+            string isHidden = "hidden";
+        }
+
+        <div class="@isHidden">
+        </div>
+    }
+    
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@section Scripts{
+    <script src="~/js/AddProductToStore.js"></script>
+}
