--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -91,11 +91,11 @@
 
                                         break;
 
-                                    case SD.RoleStorekeeper:
+                                    case SD.RoleStockkeeper:
 
                                         <ul class="navbar-nav flex-grow-1">
                                             <li>
-                                                <a class="nav-link text-light" asp-area="Storekeeper" asp-controller="Store" asp-action="Index">Склад</a>
+                                                <a class="nav-link text-light" asp-area="Stockkeeper" asp-controller="Stock" asp-action="Index">Склад</a>
                                             </li>
                                         </ul>
 
