--- a/Bookstore/Areas/Identity/Views/User/LogIn.cshtml
+++ b/Bookstore/Areas/Identity/Views/User/LogIn.cshtml
@@ -3,25 +3,25 @@
 
 <div class="container">
     <div class="row">
-        <h1>LogIn</h1>
+        <h1>Войти</h1>
         <form method="post" enctype="multipart/form-data">
             <div>
                 <div class="col-6">
-                    <label asp-for="Email" class="ms-1 my-1 text-dark"></label>
+                    <label asp-for="Email" class="ms-1 my-1 text-dark">Электронная почта</label>
                     <input asp-for="Email" class="form-control border-0 shadow" />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="col-6">
-                    <label asp-for="Password" class="ms-1 my-1 text-dark"></label>
+                    <label asp-for="Password" class="ms-1 my-1 text-dark">Пароль</label>
                     <input asp-for="Password" class="form-control border-0 shadow" />
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
             </div>
             <div class="mt-2">
-                <button type="submit" class="btn btn-success">LogIn</button>
+                <button type="submit" class="btn btn-success">Войти</button>
             </div>
             <div class="mt-2">
-                <a asp-area="Identity" asp-controller="User" asp-action="Registration" class="btn btn-link">Registration</a>
+                <a asp-area="Identity" asp-controller="User" asp-action="Registration" class="btn btn-link">Регистрация</a>
             </div>
         </form>
     </div>
