--- a/Bookstore/Areas/Stockkeeper/Views/Stock/Index.cshtml
+++ b/Bookstore/Areas/Stockkeeper/Views/Stock/Index.cshtml
@@ -1,18 +1,26 @@
 ﻿@model Stock
 
-<h2>Склад @Model.City, @Model.Street</h2>
+
+<h2>
+    Склад
+    @if (Model != null)
+    {
+        <a>@Model.City,@Model.Street</a>
+    }
+</h2>
 
 <div class="container">
     <div class="col-2 pb-5 mt-2 pt-3">
         <button id="openSearch" onclick="enterIdProduct('/Stockkeeper/Stock/AddProductInStock?')" class="btn btn-success border-0 form-control">Новое поступление</button>
     </div>
 
-    <div class="row border border-1 rounded rounded-1 mt-1">
+    <div class="row border border-2 rounded rounded-2 mt-1 p-2">
 
         <table id="stock" class="table table-bordered table-striped pt-3 pb-3 my-1">
-            <thead class="pt-4 pb-4 table-gray">
+            <thead class="pt-4 pb-4 table-dark">
                 <tr>
-                    <th>Id</th>
+                    <th>Id Записи</th>
+                    <th>Id Товара</th>
                     <th>Название</th>
                     <th>Количество</th>
                     <th>Номер полки</th>
