--- a/Bookstore/Areas/Stockkeeper/Views/Stock/Index.cshtml
+++ b/Bookstore/Areas/Stockkeeper/Views/Stock/Index.cshtml
@@ -9,27 +9,33 @@
     }
 </h2>
 
-<div class="container">
-    <div class="col-2 pb-5 mt-2 pt-3">
-        <button id="openSearch" onclick="enterIdProduct('/Stockkeeper/Stock/AddProductInStock?')" class="btn btn-success border-0 form-control">Новое поступление</button>
+<div class="container mb-5">
+    <div class="row">
+        <div class="col-2 mb-3 mt-2 pt-3">
+            <button id="openSearch" onclick="enterIdProduct('/Stockkeeper/Stock/AddProductInStock?')" class="btn btn-success border-0 form-control">Новое поступление</button>
+        </div>
+        <div class="col-8"></div>
+        <div class="col-2 pb-4 mb-3 mt-2 pt-3 text-right">
+            <a asp-area="Stockkeeper" asp-controller="Stock" asp-action="GetPurchaseRequest" class="btn btn-success border-0 form-control">Заказать товар</a>
+        </div>
     </div>
-
     <div class="row border border-2 rounded rounded-2 mt-1 p-2">
-
-        <table id="stock" class="table table-bordered table-striped pt-3 pb-3 my-1">
-            <thead class="pt-4 pb-4 table-dark">
+        <table id="stock" class="table table-bordered table-striped pt-3 my-1">
+            <thead class="pt-4 table-dark">
                 <tr>
                     <th>Id Записи</th>
                     <th>Id Товара</th>
                     <th>Название</th>
                     <th>Количество</th>
                     <th>Номер полки</th>
-                    <th></th>
+                    <th>Изменить</th>
+                    <th>Заказать</th>
                 </tr>
             </thead>
         </table>
     </div>
 </div>
+
 
 @section Scripts{
     <script src="~/js/Store.js"></script>
