--- a/Bookstore/Views/Shared/_Layout.cshtml
+++ b/Bookstore/Views/Shared/_Layout.cshtml
@@ -138,10 +138,10 @@
                     {
                         <ul class="navbar-nav flex-grow-1 justify-content-end">
                             <li>
-                                <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="Registration">Registration</a>
+                                <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="Registration">Регистрация</a>
                             </li>
                             <li>
-                                <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="LogIn">Log in</a>
+                                <a class="nav-link text-light" asp-area="Identity" asp-controller="User" asp-action="LogIn">Войти</a>
                             </li>
 
                         </ul>
