--- a/Bookstore/Areas/Stockkeeper/Views/Stock/Index.cshtml
+++ b/Bookstore/Areas/Stockkeeper/Views/Stock/Index.cshtml
@@ -30,6 +30,7 @@
                     <th>Номер полки</th>
                     <th>Изменить</th>
                     <th>Заказать</th>
+                    <th>Всего</th>
                 </tr>
             </thead>
         </table>
