--- a/Bookstore/Areas/Stockkeeper/Views/Stock/GetPurchaseRequest.cshtml
+++ b/Bookstore/Areas/Stockkeeper/Views/Stock/GetPurchaseRequest.cshtml
@@ -1,17 +1,16 @@
-﻿@model PurchaseRequest
-
-
+﻿
 <div class="container">
     <h1>Заявка на закупку</h1>
-    <form>
-        <div class="form-group">
-            <label for="inputId">ID:</label>
-            <input type="text" class="form-control" id="inputId" placeholder="Введите ID">
-        </div>
-        <div class="form-group">
-            <label for="inputQuantity">Количество:</label>
-            <input type="number" class="form-control" id="inputQuantity" placeholder="Введите количество">
-        </div>
-        <button type="submit" class="btn btn-primary">Отправить</button>
-    </form>
+    <div class="row border border-2 rounded rounded-2 mt-1 p-2">
+        <table id="purchaseRequest" class="table table-bordered table-striped pt-3 my-1">
+            <thead class="pt-4 table-dark">
+                <tr>
+                    <th>Id Товара</th>
+                    <th>Название</th>
+                    <th>Всего на складе</th>
+                    <th>Требуемое количество</th>
+                </tr>                
+            </thead>
+        </table>
+    </div>
 </div>
