--- a/Bookstore/Areas/Stockkeeper/Views/Stock/Index.cshtml
+++ b/Bookstore/Areas/Stockkeeper/Views/Stock/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@model StockVM
 
-
 <h2>
     Склад
     @if (Model.Stock != null)
@@ -12,7 +11,7 @@
 <div class="container mb-5">
     <div class="row">
         <div class="col-2 mb-3 mt-2 pt-3">
-            <button id="openSearch" onclick="enterIdProduct('/Stockkeeper/Stock/AddProductInStock?')" class="btn btn-success border-0 form-control">Новое поступление</button>
+            <button onclick="addProductInStock('/Stockkeeper/Stock/AddProductInStock?')" class="btn btn-success border-0 form-control">Новое поступление</button>
         </div>
         <div class="col-8"></div>
         <div class="col-2 pb-4 mb-3 mt-2 pt-3 text-right">
@@ -25,6 +24,8 @@
                 <tr>
                     <th>Id Записи</th>
                     <th>Id Товара</th>
+                    <th>Время</th>
+                    <th>Тип</th>
                     <th>Название</th>
                     <th>Количество</th>
                     <th>Номер полки</th>
@@ -38,7 +39,9 @@
 </div>
 
 
-@section Scripts{
-    <script src="~/js/Store.js"></script>
+
+@section Scripts {
+    <script src="~/js/Stock/MainController.js"></script>
 }
+
 
