add new table for PurchaseRequest

--- a/Bookstore/Areas/Stockkeeper/Views/Stock/Index.cshtml
+++ b/Bookstore/Areas/Stockkeeper/Views/Stock/Index.cshtml
@@ -15,7 +15,7 @@
         </div>
         <div class="col-8"></div>
         <div class="col-2 pb-4 mb-3 mt-2 pt-3 text-right">
-            <a asp-area="Stockkeeper" asp-controller="Stock" asp-action="GetPurchaseRequest" class="btn btn-success border-0 form-control">Заказать товар</a>
+            <a asp-area="Stockkeeper" asp-controller="Stock" asp-action="PurchaseRequest" class="btn btn-success border-0 form-control">Заказать товар</a>
         </div>
     </div>
     <div class="row border border-2 rounded rounded-2 mt-1 p-2">
