--- a/Bookstore/Areas/Stockkeeper/Views/Stock/PurchaseRequest.cshtml
+++ b/Bookstore/Areas/Stockkeeper/Views/Stock/PurchaseRequest.cshtml
@@ -6,7 +6,7 @@
             <a class="btn btn-secondary p-2 pt-2" asp-area="Stockkeeper" asp-controller="Stock" asp-action="Index">Назад на склад</a>
         </div>
         <div class="col-8"></div>
-        <form id="purchaseRequestSend" action="/submit" method="POST">
+        <form id="purchaseRequestSend" method="POST">
             <div class="col-2 pb-4 mb-3 mt-2 pt-3 text-right">
                 <button onclick="sendTable()" type="submit" class="btn btn-success border-0 form-control">Оформить</button>
             </div>
