--- a/Bookstore/Areas/Customer/Views/Home/Details.cshtml
+++ b/Bookstore/Areas/Customer/Views/Home/Details.cshtml
@@ -22,6 +22,9 @@
                 <div>
                     ISBN: @Model.ISBN
                 </div>
+                <div>
+                    Id товара: @Model.BookId
+                </div>
                 <hr class="col-8 mb-1" />
                 <div class="mt-0 pt-0">
                     <div class="fs-5 fw-bolder">@Model.Price ₽</div>
