--- a/Bookstore/Areas/Customer/Views/Home/Index.cshtml
+++ b/Bookstore/Areas/Customer/Views/Home/Index.cshtml
@@ -1,24 +1,4 @@
-﻿@inject ApplicationDbContext DB
-@{
-    var db = DB;
-}
-
-@inject IHttpContextAccessor HttpContextAccessor
-@{
-    var httpContext = HttpContextAccessor.HttpContext;
-    User? user = null;
-    if (httpContext.Session.GetInt32("Username") != null)
-    {
-        int? userId = httpContext.Session.GetInt32("Username");
-        if ((userId != null) && (db.User.Find(userId) != null))
-        {
-            user = db.User.Find(userId);
-        }
-    }
-}
-
-
-@model BookVM
+﻿@model BookVM
 
 <div class="container-fluid">
     <div class="row pb-5 mb-5 mb-2">
@@ -62,22 +42,24 @@
                                                     <i class="bi bi-three-dots"></i>
                                                 </a>
                                             </div>
-                                            <div class="col-0">
-                                                @if (db.WishLists.Where(u=>u.UserId == user.UserId).Where(u=>u.ProductId==book.BookId) != null)
-                                                {
-                                                    <button type="submit" asp-area="Customer" asp-controller="Wishlist" asp-action="AddWishList"
-                                                            asp-route-productId="@book.BookId" class="btn btn-warning border-0">
-                                                        <i class="bi bi-bookmark-check-fill"></i>
-                                                    </button>
-                                                }
-                                                else
-                                                {
-                                                    <button type="submit" asp-area="Customer" asp-controller="Wishlist" asp-action="AddWishList"
-                                                            asp-route-productId="@book.BookId" class="btn btn-warning border-0">
-                                                        <i class="bi bi-bookmark-plus"></i>
-                                                    </button>
-                                                }          
-                                            </div>
+                                            @if (Model.WishList != null)
+                                            {
+                                                <div class="col-0">
+                                                    <div>
+                                                        <button id="wishList" type="submit" onclick="addToWishlist(@book.BookId)" class="btn btn-warning border-0">
+
+                                                            @if (Model.WishList.Where(u => u.ProductId == book.BookId).FirstOrDefault() != null)
+                                                            {
+                                                                <i class="bi bi-bookmark-dash-fill"></i>
+                                                            }
+                                                            else
+                                                            {
+                                                                <i id="btnWishlist" class="bi bi-bookmark-check-fill"></i>
+                                                            }
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            }
                                             <div class="col-0">
                                                 <button type="submit" asp-area="Customer" asp-controller="ShoppingBasket" asp-action="AddBasket"
                                                         asp-route-productId="@book.BookId" class="btn btn-success border-0">
@@ -94,3 +76,8 @@
             }
     </div>
 </div>
+
+
+@section Scripts{
+    <script src="~/js/Customer/Details.js"></script>
+}
