--- a/Bookstore/Areas/Stockkeeper/Views/Stock/Index.cshtml
+++ b/Bookstore/Areas/Stockkeeper/Views/Stock/Index.cshtml
@@ -11,7 +11,7 @@
 <div class="container mb-5">
     <div class="row">
         <div class="col-2 mb-3 mt-2 pt-3">
-            <button onclick="addProductInStock('/Stockkeeper/Stock/AddProductInStock?')" class="btn btn-success border-0 form-control">Новое поступление</button>
+            <button id="purchaseRequestSend" onclick="addProductInStock('/Stockkeeper/Stock/AddProductInStock?')" class="btn btn-success border-0 form-control">Новое поступление</button>
         </div>
         <div class="col-8"></div>
         <div class="col-2 pb-4 mb-3 mt-2 pt-3 text-right">
